[package]
name = "sol-remitano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "sol_remitano"
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "1.16.1"
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"